# Functional-Programming-HW

./: README.md
assignment1/src/: submission.ml
assignment1/tests/: tests.ml
assignment2/: dune
assignment2/src/: dune  keywordcount.ml  simpledict.ml  simpledict.mli  utils.ml  utils.mli
assignment2/tests/: dune  tests.ml
assignment3/: .gitignore  dune
assignment3/_coverage/: index.html
assignment3/_coverage/src/: finite_group.ml.html  postfix_calc.ml.html  ring.ml.html
assignment3/src/: dune  finite_group.ml  postfix_calc.ml  postfix_calc.mli  ring.ml
assignment3/tests/: dune  tests.ml
assignment4/: bisect180832655.coverage  bisect34199131.coverage  bisect350962208.coverage  bisect536511007.coverage  bisect746003605.coverage
assignment4/_coverage/: index.html
assignment4/_coverage/src/: lib.ml.html
assignment4/src/: dune  lib.ml  lib.mli  ngrams.ml
assignment4/tests/: dune  tests.ml
assignment5/src/: discussion.txt  monads.ml  monads.mli
assignment5/tests/: dune  tests.ml
