(library
 (name simpledict)
 (modules simpledict)
 (libraries core)
 (preprocess
  (pps ppx_deriving.show ppx_jane)))

(library
 (name utils)
 (modules utils)
 (libraries core simpledict)
 (preprocess
  (pps ppx_jane)))

(executable
 (name keywordcount)
 (modules keywordcount)
 (libraries core core_unix stdio simpledict utils))
